docker_convert/changedetection/changedetection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: changedetection
  name: changedetection
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: changedetection
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: changedetection
    spec:
      containers:
        - env:
            - name: PLAYWRIGHT_DRIVER_URL
              value: ws://playwright-chrome:3000
          image: ghcr.io/dgtlmoon/changedetection.io
          name: changedetection
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /datastore
              name: changedetection-data
      hostname: changedetection
      restartPolicy: Always
      volumes:
        - name: changedetection-data
          persistentVolumeClaim:
            claimName: changedetection-data
