docker_convert/changedetection/playwright-chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: playwright-chrome
  name: playwright-chrome
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: playwright-chrome
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: playwright-chrome
    spec:
      containers:
        - env:
            - name: MAX_CONCURRENT_CHROME_PROCESSES
              value: "10"
            - name: SCREEN_DEPTH
              value: "16"
            - name: SCREEN_HEIGHT
              value: "1024"
            - name: SCREEN_WIDTH
              value: "1920"
          image: dgtlmoon/sockpuppetbrowser:latest
          name: playwright-chrome
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
      hostname: playwright-chrome
      restartPolicy: Always
